Finished block system, now all to do is generate Blocks class very easy :)